# chromium_aaos

./: .gitignore  Release_X64.gn  Release_arm64.gn  automotive.patch  build_apk.sh  build_release.sh  build_release_recover.sh  install_from_phone.md  pull_latest.sh  readme.md
